src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__token_dashboard_provider_rollup__token_dashboard_rollup_nan_cost_no_panic.snap
---
source: src/tui/snapshot_tests/token_dashboard_provider_rollup.rs
expression: terminal.backend()
---
"╔════════════════════════════════════════════════[ Per-Provider Usage ]════════════════════════════════════════════════╗"
"║ Provider        Cost                   Context                     Quota                                             ║"
"║ claude         $0.00         ctx 5,000/200,000                         -                                             ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════[ Aggregate Token Usage ]═══════════════════════════════════════════════╗"
"║ Input: 5.0k  Output: 0  Cache R: 0  Cache W: 0                                                                       ║"
"║ Total: 5.0k  Cache Hit: 0.0%  Sessions: 1                                                                            ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════════════[ Per-Session Token Breakdown ]════════════════════════════════════════════╗"
"║       ID               Title     Input    Output   Cache R   Cache W    $/kT                                         ║"
"║       #1      Add login flow      5.0k         0         0         0  $0.000                                         ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
