src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__token_dashboard_provider_rollup__token_dashboard_rollup_narrow_80x24.snap
---
source: src/tui/snapshot_tests/token_dashboard_provider_rollup.rs
expression: terminal.backend()
---
"╔════════════════════════════[ Per-Provider Usage ]════════════════════════════╗"
"║ Provider        Cost           Ctx           Quota                           ║"
"║ claude         $0.42  12.3k/200.0k               -                           ║"
"║ minimax        $0.00   4.2k/204.8k        247/4500                           ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════[ Aggregate Token Usage ]═══════════════════════════╗"
"║ Input: 16.5k  Output: 0  Cache R: 0  Cache W: 0                              ║"
"║ Total: 16.5k  Cache Hit: 0.0%  Sessions: 2                                   ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════[ Per-Session Token Breakdown ]════════════════════════╗"
"║       ID               Title     Input    Output   Cache R   Cache W    $/kT ║"
"║       #1      Add login flow     12.3k         0         0         0  $0.034 ║"
"║       #2      Add login flow      4.2k         0         0         0  $0.000 ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
