src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__token_dashboard_provider_rollup__token_dashboard_rollup_quota_at_100pct.snap
---
source: src/tui/snapshot_tests/token_dashboard_provider_rollup.rs
expression: terminal.backend()
---
"╔════════════════════════════════════════════════[ Per-Provider Usage ]════════════════════════════════════════════════╗"
"║ Provider        Cost                   Context                     Quota                                             ║"
"║ minimax        $0.00         ctx 4,500/204,800      quota 4500/4500 (5h)                                             ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════[ Aggregate Token Usage ]═══════════════════════════════════════════════╗"
"║ Input: 4.5k  Output: 0  Cache R: 0  Cache W: 0                                                                       ║"
"║ Total: 4.5k  Cache Hit: 0.0%  Sessions: 1                                                                            ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════════════[ Per-Session Token Breakdown ]════════════════════════════════════════════╗"
"║       ID               Title     Input    Output   Cache R   Cache W    $/kT                                         ║"
"║       #1      Add login flow      4.5k         0         0         0  $0.000                                         ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
