src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__token_dashboard_provider_rollup__token_dashboard_rollup_three_providers_120x40.snap
---
source: src/tui/snapshot_tests/token_dashboard_provider_rollup.rs
expression: terminal.backend()
---
"╔════════════════════════════════════════════════[ Per-Provider Usage ]════════════════════════════════════════════════╗"
"║ Provider        Cost                   Context                     Quota                                             ║"
"║ claude         $0.30        ctx 12,000/200,000                         -                                             ║"
"║ minimax        $0.05         ctx 4,200/204,800       quota 247/4500 (5h)                                             ║"
"║ ollama         $0.00                 ctx 1,000                         -                                             ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════[ Aggregate Token Usage ]═══════════════════════════════════════════════╗"
"║ Input: 13.2k  Output: 0  Cache R: 4.0k  Cache W: 0                                                                   ║"
"║ Total: 17.2k  Cache Hit: 23.3%  Sessions: 4                                                                          ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════════════[ Per-Session Token Breakdown ]════════════════════════════════════════════╗"
"║       ID               Title     Input    Output   Cache R   Cache W    $/kT                                         ║"
"║       #1      Add login flow      8.0k         0      4.0k         0  $0.008                                         ║"
"║       #3      Add login flow      4.2k         0         0         0  $0.012                                         ║"
"║       #4      Add login flow      1.0k         0         0         0  $0.000                                         ║"
"║       #2      Add login flow         0         0         0         0  $0.000                                         ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
