src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__token_dashboard_provider_rollup__token_dashboard_rollup_unknown_agent_id.snap
---
source: src/tui/snapshot_tests/token_dashboard_provider_rollup.rs
expression: terminal.backend()
---
"╔════════════════════════════════════════════════[ Per-Provider Usage ]════════════════════════════════════════════════╗"
"║ Provider        Cost                   Context                     Quota                                             ║"
"║ unknown        $0.07                 ctx 3,000                         -                                             ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════[ Aggregate Token Usage ]═══════════════════════════════════════════════╗"
"║ Input: 3.0k  Output: 0  Cache R: 0  Cache W: 0                                                                       ║"
"║ Total: 3.0k  Cache Hit: 0.0%  Sessions: 1                                                                            ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════════════[ Per-Session Token Breakdown ]════════════════════════════════════════════╗"
"║       ID               Title     Input    Output   Cache R   Cache W    $/kT                                         ║"
"║       #1      Add login flow      3.0k         0         0         0  $0.023                                         ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
