src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__token_dashboard_provider_rollup__token_dashboard_rollup_zero_sessions.snap
---
source: src/tui/snapshot_tests/token_dashboard_provider_rollup.rs
expression: terminal.backend()
---
"╔════════════════════════════════════════════════[ Per-Provider Usage ]════════════════════════════════════════════════╗"
"║ Provider        Cost                   Context                     Quota                                             ║"
"║ (no active sessions)                                                                                                 ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔══════════════════════════════════════════════[ Aggregate Token Usage ]═══════════════════════════════════════════════╗"
"║ Input: 0  Output: 0  Cache R: 0  Cache W: 0                                                                          ║"
"║ Total: 0  Cache Hit: 0.0%  Sessions: 0                                                                               ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════════════[ Per-Session Token Breakdown ]════════════════════════════════════════════╗"
"║       ID               Title     Input    Output   Cache R   Cache W    $/kT                                         ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
